@@ -80,22 +80,23 @@
         and update as needed in extensions-contrib/druid-ranger-security/pom.xml  -->
         <apache.ranger.version>2.8.0</apache.ranger.version>
         <antlr4.version>4.5.3</antlr4.version>
-        <gson.version>2.13.2</gson.version>
+        <gson.version>2.14.0</gson.version>
         <scala.library.version>2.13.16</scala.library.version>
         <avatica.version>1.28.0</avatica.version>
         <avro.version>1.12.0</avro.version>
-        <parquet.version>1.16.0</parquet.version>
+        <parquet.version>1.17.1</parquet.version>
         <bytebuddy.version>1.18.5</bytebuddy.version>
         <!--
             The base calcite parser was copied into the project; when updating Calcite run dev/upgrade-calcite-parser to adopt upstream changes
           -->
-        <calcite.version>1.37.0</calcite.version>
+        <calcite.version>1.41.0</calcite.version>
         <confluent.version>6.2.15</confluent.version>
         <cronutils.version>9.2.0</cronutils.version>
         <datasketches.version>4.2.0</datasketches.version>
         <datasketches.memory.version>2.2.0</datasketches.memory.version>
         <derby.version>10.17.1.0</derby.version>
         <dropwizard.metrics.version>4.2.22</dropwizard.metrics.version>
+        <errorprone.annotations.version>2.50.0</errorprone.annotations.version>
         <errorprone.version>2.49.0</errorprone.version>
         <fabric8.version>7.6.0</fabric8.version>
         <fastutil.version>8.5.4</fastutil.version>
@@ -105,21 +106,21 @@
         <iceberg.core.version>1.10.0</iceberg.core.version>
         <jetty.version>12.1.11</jetty.version>
         <jersey.version>1.19.4</jersey.version>
-        <jackson.version>2.21.4</jackson.version>
+        <jackson.version>2.22.1</jackson.version>
         <codehaus.jackson.version>1.9.13</codehaus.jackson.version>
-        <log4j.version>2.26.0</log4j.version>
+        <log4j.version>2.26.1</log4j.version>
         <mysql.version>8.2.0</mysql.version>
         <mariadb.version>2.7.3</mariadb.version>
         <netty3.version>3.10.6.Final</netty3.version>
-        <netty4.version>4.2.15.Final</netty4.version>
+        <netty4.version>4.2.16.Final</netty4.version>
         <postgresql.version>42.7.12</postgresql.version>
         <protobuf.version>4.35.1</protobuf.version>
         <resilience4j.version>1.3.1</resilience4j.version>
         <slf4j.version>2.0.18</slf4j.version>
-        <jna.version>5.18.1</jna.version>
+        <jna.version>5.19.1</jna.version>
         <jna-platform.version>5.18.1</jna-platform.version>
         <hadoop.compile.version>3.5.0</hadoop.compile.version>
-        <graaljs.version>22.3.5</graaljs.version>
+        <graaljs.version>25.1.3</graaljs.version>
         <mockito.version>5.23.0</mockito.version>
         <!-- AWS SDK v1 is still used as a transitive dependency by Hadoop and Ranger extensions.
              It should be removed once those extensions are upgraded or dropped (see #19109). -->
@@ -127,7 +128,7 @@
         <aws.sdk.v2.version>2.49.6</aws.sdk.v2.version>
         <caffeine.version>3.2.4</caffeine.version>
         <jacoco.version>0.8.14</jacoco.version>
-        <testcontainers.version>2.0.3</testcontainers.version>
+        <testcontainers.version>2.0.5</testcontainers.version>
         <hibernate-validator.version>6.2.5.Final</hibernate-validator.version>
         <httpclient.version>4.5.13</httpclient.version>
         <okhttp.version>5.3.2</okhttp.version>
@@ -168,7 +169,6 @@
             <!-- required for SIMD for druid.expressions.useVectorApi -->
             --add-modules=jdk.incubator.vector
         </jdk.strong.encapsulation.argLine>
-        <jdk.security.manager.allow.argLine><!-- empty placeholder --></jdk.security.manager.allow.argLine>
         <repoOrgId>maven.org</repoOrgId>
         <repoOrgName>Maven Central Repository</repoOrgName>
         <repoOrgUrl>https://repo.maven.apache.org/maven2/</repoOrgUrl>
@@ -413,7 +413,7 @@
             <dependency>
                 <groupId>com.ning</groupId>
                 <artifactId>compress-lzf</artifactId>
-                <version>1.0.4</version>
+                <version>1.2.0</version>
             </dependency>
             <dependency>
                 <groupId>com.github.rvesse</groupId>
@@ -667,7 +667,7 @@
             <dependency>
                 <groupId>com.google.errorprone</groupId>
                 <artifactId>error_prone_annotations</artifactId>
-                <version>${errorprone.version}</version>
+                <version>${errorprone.annotations.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.ibm.icu</groupId>
@@ -766,6 +766,7 @@
                 <groupId>org.graalvm.js</groupId>
                 <artifactId>js</artifactId>
                 <version>${graaljs.version}</version>
+                <type>pom</type>
             </dependency>
             <dependency>
                 <groupId>org.graalvm.js</groupId>
@@ -986,17 +987,6 @@
                 <artifactId>commons-dbcp2</artifactId>
                 <version>2.11.0</version>
             </dependency>
-            <!-- this is relocated to at.yawk.lz4, but license checker script (the one that uses licenses.yaml)
-             complains about stuff (our dependencies) using org.lz4 package, so put this here even though our own
-              packaging doesn't use it directly anymore
-             -->
-            <dependency>
-                <groupId>org.lz4</groupId>
-                <artifactId>lz4-java</artifactId>
-                <version>1.8.1</version>
-            </dependency>
-            <!-- dependency:analyze complains if we don't declare this like this in our own packaging, since this is
-             what org.lz4 is relocated as -->
             <dependency>
                 <groupId>at.yawk.lz4</groupId>
                 <artifactId>lz4-java</artifactId>
@@ -1117,7 +1107,7 @@
             <dependency>
                 <groupId>org.roaringbitmap</groupId>
                 <artifactId>RoaringBitmap</artifactId>
-                <version>1.6.14</version>
+                <version>1.6.18</version>
             </dependency>
             <dependency>
                 <groupId>org.yaml</groupId>
@@ -1307,7 +1297,7 @@
             <dependency>
                 <groupId>com.github.docker-java</groupId>
                 <artifactId>docker-java-bom</artifactId>
-                <version>3.7.0</version>
+                <version>3.7.1</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
@@ -1591,7 +1581,7 @@
             <plugin>
                 <groupId>org.openrewrite.maven</groupId>
                 <artifactId>rewrite-maven-plugin</artifactId>
-                <version>5.42.0</version>
+                <version>6.44.0</version>
                 <configuration>
                     <activeRecipes>
                         <recipe>org.apache.druid.RewriteRules</recipe>
@@ -1620,7 +1610,7 @@
                     <dependency>
                         <groupId>org.openrewrite.recipe</groupId>
                         <artifactId>rewrite-jackson</artifactId>
-                        <version>0.6.0</version>
+                        <version>1.27.0</version>
                     </dependency>
                 </dependencies>
             </plugin>
@@ -1858,7 +1848,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
-                <version>3.6.2</version>
+                <version>3.6.3</version>
                 <executions>
                     <execution>
                         <id>default-cli</id>
@@ -2036,7 +2026,6 @@
                         <argLine>
                             @{jacocoArgLine}
                             ${jdk.strong.encapsulation.argLine}
-                            ${jdk.security.manager.allow.argLine}
                             -Xmx2048m
                             -XX:MaxDirectMemorySize=2500m
                             -XX:+ExitOnOutOfMemoryError
@@ -2165,20 +2154,6 @@
     </build>
 
     <profiles>
-        <profile>
-            <id>java-12+</id>
-            <activation>
-                <!-- Security Manager was permanently removed in JDK 24 (JEP 486); this flag is fatal on 24+ -->
-                <jdk>[12,24)</jdk>
-            </activation>
-            <properties>
-                <jdk.security.manager.allow.argLine>
-                  <!-- required for system-rules with Java >= 18 https://github.com/stefanbirkner/system-rules/issues/85 -->
-                  <!-- this option is only available starting in Java 12 -->
-                    -Djava.security.manager=allow
-                </jdk.security.manager.allow.argLine>
-            </properties>
-        </profile>
           <profile>
             <id>strict</id>
             <activation>
